@@ -48,7 +48,7 @@
       \item Detection of the C stack direction has been moved from
       run-time to \command{configure}: this is safer with LTO builds and
       allows the detection to be overridden -- see file \file{config.site}.
-      
+
       \item User-set \samp{DEFS} (e.g., in \file{config.site} is now
       used for compiling packages (including base packages).
     }
@@ -106,6 +106,9 @@
 
       \item \code{rbind.data.frame()} allows to keep \code{<NA>} levels
       from factor columns (\PR{17562}) via new option \code{factor.exclude}.
+
+      Additionally, it works in one more case with matrix-columns which
+      had been reported on 2017-01-16 by Krzysztof Banas.
 
       \item Correct messaging in C++ pragma checks in \pkg{tools} code for
       \command{R CMD check}, fixing \PR{17566} thanks to Xavier Robin.
